--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 </body>
 </html>
 
-<link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="styles/style.css"><img src="images2/cat-6762936_1280.jpg" alt="Cat2">
