Added image2 reference to index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cute kitty images</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles2/style2.css">
 </head>
 <body>
-    <img src="images/pexels-pixabay-416160.jpg" alt="Cat1">
+<img src="images/pexels-pixabay-416160.jpg" alt="Cat1">
+<img src="images2/cat-6762936_1280.jpg" alt="Cat2">
 </body>
 </html>
-
-<link rel="stylesheet" href="styles/style.css"><link rel="stylesheet" href="styles2/style2.css">
