--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
 </body>
 </html>
 
-<link rel="stylesheet" href="styles/style.css">
+<link rel="stylesheet" href="styles/style.css"><link rel="stylesheet" href="styles2/style2.css">
